--- a/back/package.json
+++ b/back/package.json
@@ -8,7 +8,7 @@
         "node": "18"
     },
     "scripts": {
-        "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
+        "dev": "tsc-watch --onSuccess \"npm run start\"",
         "build": "tsc -p .",
         "start": "node --es-module-specifier-resolution=node dist",
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,7 +18,7 @@
     "devDependencies": {
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
-        "ts-node-dev": "^2.0.0",
+        "tsc-watch": "^6.0.4",
         "typescript": "^5.3.3"
     },
     "dependencies": {
