--- a/back/package.json
+++ b/back/package.json
@@ -25,6 +25,7 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "knex": "^3.1.0",
+        "knex-paginate": "^3.1.1",
         "pg": "^8.11.3"
     }
 }
