--- a/back/package.json
+++ b/back/package.json
@@ -23,7 +23,8 @@
     },
     "dependencies": {
         "cors": "^2.8.5",
-        "express": "^4.18.2",
+        "express": "^5.0.0-beta.1",
+        "express-validator": "^7.0.1",
         "knex": "^3.1.0",
         "knex-paginate": "^3.1.1",
         "pg": "^8.11.3"
