Add MicroeyeTitle and Toast components

--- a/front/package.json
+++ b/front/package.json
@@ -38,7 +38,7 @@
 	"type": "module",
 	"dependencies": {
 		"@gravity-ui/yagr": "^4.1.0",
-		"@mariojgt/wind-notify": "^0.1.2",
-		"svelte-jsoneditor": "^0.21.1"
+		"svelte-jsoneditor": "^0.21.1",
+		"true-myth": "^7.1.0"
 	}
 }
