--- a/back/package.json
+++ b/back/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^5.0.0-beta.1",
+        "express-basic-auth": "^1.2.1",
         "express-validator": "^7.0.1",
         "knex": "^3.1.0",
         "knex-paginate": "^3.1.1",
